# python-agilent-file-formats

./: LICENSE  MANIFEST.in  README.md  RELEASE.md  agilent.py  environment.yml  pyproject.toml  setup.py  test.py  test_attributes.py  test_bigmosaic.py  test_ifg.py  test_ifg_mosaic.py  test_params.py  test_tile_order.py
.github/workflows/: release.yml  run-tests.yml
agilent_format/: __init__.py  agilent.py
agilent_format/datasets/: 4_noimage_agg256.bsp  4_noimage_agg256.hdr  4_noimage_agg256.seq  5_Mosaic_agg1024_0000_0000.dmd  5_mosaic_agg1024.dms  5_mosaic_agg1024.dmt  5_mosaic_agg1024.hdr  5_mosaic_agg1024_0000_0000.drd  5_mosaic_agg1024_0000_0001.dmd  5_mosaic_agg1024_0000_0001.drd  IrMosaicInfo.cfg  VisMosaicInfo.cfg  background_agg1024.bsp  background_agg1024.seq  background_agg256.bsp  background_agg256.seq
agilent_format/tests/: test_filenames.py  test_image.py  test_image_ifg.py  test_mosaic.py  test_mosiac_ifg.py  test_utils.py
old_debug/: test.py  test_attributes.py  test_bigmosaic.py  test_ifg.py  test_ifg_mosaic.py  test_params.py  test_tile_order.py
